--- a/index.html
+++ b/index.html
@@ -33,15 +33,184 @@
     </nav>
 
     <header class="jumbotron header">
-    <h1>HEADER AREA</h1>
+    The A Team
     </header>
 
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col">
-          <h1>BODY AREA</h1>
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="col col-sm-6 offset-1">
+                  <h3>Replace Name</h3>
+                  <h4>Replace Area of Intrest</h4>
+                  <h4>Projects</h4>
+                  <ul class="list-unstyled">
+                    <li><a href="https://github.com/">Project 1</a></li>
+                    <li><a href="https://github.com/">Project 2</a></li>
+                    <li><a href="https://github.com/">Project 3</a></li>
+                  </ul>
+                  <h4>Social Handles</h4>
+                  <a class="btn btn-social-icon btn-github" href="http://github.com/"><i class="fa fa-github"></i></a>
+                  <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+                  <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                  <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                </div>
+                <div class="col col-sm-4"><img src="img/dp.jpeg"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="col col-sm-4 offset-1"><img src="img/dp.jpeg"></div>
+                <div class="col col-sm-5 offset-2">
+                  <h3>Replace Name</h3>
+                  <h4>Replace Area of Intrest</h4>
+                  <h4>Projects</h4>
+                  <ul class="list-unstyled">
+                    <li><a href="https://github.com/">Project 1</a></li>
+                    <li><a href="https://github.com/">Project 2</a></li>
+                    <li><a href="https://github.com/">Project 3</a></li>
+                  </ul>
+                  <h4>Social Handles</h4>
+                  <a class="btn btn-social-icon btn-github" href="http://github.com/"><i class="fa fa-github"></i></a>
+                  <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+                  <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                  <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="col col-sm-6 offset-1">
+                  <h3>Replace Name</h3>
+                  <h4>Replace Area of Intrest</h4>
+                  <h4>Projects</h4>
+                  <ul class="list-unstyled">
+                    <li><a href="https://github.com/">Project 1</a></li>
+                    <li><a href="https://github.com/">Project 2</a></li>
+                    <li><a href="https://github.com/">Project 3</a></li>
+                  </ul>
+                  <h4>Social Handles</h4>
+                  <a class="btn btn-social-icon btn-github" href="http://github.com/"><i class="fa fa-github"></i></a>
+                  <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+                  <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                  <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                </div>
+                <div class="col col-sm-4"><img src="img/dp.jpeg"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="col col-sm-4 offset-1"><img src="img/dp.jpeg"></div>
+                <div class="col col-sm-5 offset-2">
+                  <h3>Replace Name</h3>
+                  <h4>Replace Area of Intrest</h4>
+                  <h4>Projects</h4>
+                  <ul class="list-unstyled">
+                    <li><a href="https://github.com/">Project 1</a></li>
+                    <li><a href="https://github.com/">Project 2</a></li>
+                    <li><a href="https://github.com/">Project 3</a></li>
+                  </ul>
+                  <h4>Social Handles</h4>
+                  <a class="btn btn-social-icon btn-github" href="http://github.com/"><i class="fa fa-github"></i></a>
+                  <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+                  <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                  <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="col col-sm-6 offset-1">
+                  <h3>Replace Name</h3>
+                  <h4>Replace Area of Intrest</h4>
+                  <h4>Projects</h4>
+                  <ul class="list-unstyled">
+                    <li><a href="https://github.com/">Project 1</a></li>
+                    <li><a href="https://github.com/">Project 2</a></li>
+                    <li><a href="https://github.com/">Project 3</a></li>
+                  </ul>
+                  <h4>Social Handles</h4>
+                  <a class="btn btn-social-icon btn-github" href="http://github.com/"><i class="fa fa-github"></i></a>
+                  <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+                  <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                  <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                </div>
+                <div class="col col-sm-4"><img src="img/dp.jpeg"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="col col-sm-4 offset-1"><img src="img/dp.jpeg"></div>
+                <div class="col col-sm-5 offset-2">
+                  <h3>Replace Name</h3>
+                  <h4>Replace Area of Intrest</h4>
+                  <h4>Projects</h4>
+                  <ul class="list-unstyled">
+                    <li><a href="https://github.com/">Project 1</a></li>
+                    <li><a href="https://github.com/">Project 2</a></li>
+                    <li><a href="https://github.com/">Project 3</a></li>
+                  </ul>
+                  <h4>Social Handles</h4>
+                  <a class="btn btn-social-icon btn-github" href="http://github.com/"><i class="fa fa-github"></i></a>
+                  <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+                  <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                  <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                  <a class="btn btn-social-icon btn-google" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </div>
 
     <footer class="footer">
@@ -62,7 +231,7 @@
                       <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
                       <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
                       <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-                      <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                      <a class="btn btn-social-icon btn-google" href="mailto:"><i class="fa fa-envelope-o"></i></a>
                   </div>
               </div>
           </div>
