--- a/index.html
+++ b/index.html
@@ -15,28 +15,22 @@
   <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">The A Team</a>
-        <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#Navbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse" id="Navbar">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item-active">
-              <a class="nav-link" href="#"> Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"> About</a>
-            </li>
-          </ul>
-        </div>
+        <a class="navbar-brand ml-auto mr-auto" href="index.html">The A Team</a>
       </div>
     </nav>
 
     <header class="jumbotron header">
-    The A Team
+      <img class="img" src="img/logo.png" alt="The A Team">
     </header>
 
     <div class="container">
+
+      <div class="row">
+        <div class="col text-center">
+          yaha team k bare me kuchh likh diya jaega abhi.. wait
+        </div>
+      </div>
+
         <div class="row">
 
 
@@ -208,7 +202,7 @@
                   </ul>
               </div>
               
-              <div class="col col-sm-6 offset-4 align-self-center">
+              <div class="col-8 col-sm-6 offset-4 align-self-center justify-content-center">
                   <div class="text-center">
                       <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
                       <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
