--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <div class="splash">
-      <img src="img/logo.png" class="fade-in justify-content-center">
+      <img src="img/logo2.png" class="fade-in justify-content-center">
     </div>
 
     <!-- <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
@@ -28,8 +28,8 @@
       </div>
     </nav> -->
 
-    <header class="jumbotron header">
-      <img class="img" src="img/logo.png" alt="The A Team">
+    <header class="header">
+      <img class="img" src="img/logo3.jpg" alt="The A Team">
     </header>
 
     <div class="container">
